--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -113,4 +113,42 @@
         </LinearLayout>
 
     </com.rafakob.drawme.DrawMeRelativeLayout>
+
+
+    <com.rafakob.drawme.DrawMeRelativeLayout
+        android:id="@+id/notifications_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <ImageView
+            android:id="@+id/notifications"
+            android:layout_width="33dp"
+            android:layout_height="30sp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_notifications_black_24dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16sp"
+            android:layout_toEndOf="@id/notifications"
+
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/show_notification"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/notifications_option"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+    </com.rafakob.drawme.DrawMeRelativeLayout>
 </LinearLayout>
