--- a/app/src/main/res/layout/activity_update_order.xml
+++ b/app/src/main/res/layout/activity_update_order.xml
@@ -206,7 +206,7 @@
                                     android:editable="false"
                                     android:paddingStart="16dp"
                                     android:tag="client_name_label" />
-                            </FrameLayout>
+                            </FrameLayout>Integer.parseInt(s.toString()
                         </LinearLayout>
 
                         <LinearLayout
@@ -286,6 +286,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:orientation="horizontal">
+
                                     <ImageView
                                         android:id="@+id/add_product"
                                         android:layout_width="@dimen/_40sdp"
@@ -443,7 +444,7 @@
                             android:layout_marginTop="20dp"
                             android:layout_marginEnd="16dp"
                             android:orientation="vertical"
-                            android:visibility="gone">
+                            android:visibility="visible">
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -731,48 +732,6 @@
                             </FrameLayout>
                         </LinearLayout>
 
-                        <LinearLayout
-                            android:id="@+id/ddrftgfdf"
-                            android:layout_width="match_parent"
-
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="20dp"
-                            android:layout_marginEnd="16dp"
-                            android:onClick="showLabel"
-                            android:orientation="vertical">
-
-                            <TextView
-
-                                android:id="@+id/order_cost_label"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/product_cost"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="18sp"
-                                android:textStyle="bold"
-                                android:visibility="gone" />
-
-                            <FrameLayout
-                                android:id="@+id/order_cost2"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:background="@drawable/ic_background_gray">
-
-                                <EditText
-                                    android:id="@+id/order_cost"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center_vertical"
-                                    android:layout_marginEnd="26dp"
-                                    android:background="@color/gray"
-                                    android:editable="false"
-                                    android:paddingStart="16dp"
-                                    android:tag="client_name_label" />
-
-                            </FrameLayout>
-                        </LinearLayout>
-
                         <!--cost-->
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -856,7 +815,6 @@
 
                                     <EditText
                                         android:id="@+id/item_no"
-
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center_vertical"
@@ -1080,7 +1038,7 @@
             android:layout_above="@id/navigation"
             android:layout_marginBottom="0dp"
             android:padding="@dimen/_16sdp"
-            android:visibility="gone"
+            android:visibility="visible"
             fab:menu_backgroundColor="#ccffffff"
             fab:menu_colorNormal="@color/colorPrimaryDark"
             fab:menu_colorPressed="#2E7D32"
@@ -1412,96 +1370,94 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginBottom="@dimen/_40sdp"
         app:behavior_peekHeight="?attr/actionBarSize"
         app:layout_behavior="@string/top_sheet_behavior"
         tools:ignore="MissingPrefix">
 
-        <ScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:background="@color/gray"
+            android:gravity="center_vertical"
+            android:minHeight="?android:attr/listPreferredItemHeight"
+            android:orientation="vertical">
 
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/product_image"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/gray"
-                android:gravity="center_vertical"
-                android:minHeight="?android:attr/listPreferredItemHeight"
-                android:orientation="vertical">
+                android:layout_height="@dimen/_200sdp"
+                android:adjustViewBounds="true"
+                android:background="@color/material_grey_300"
+                android:minHeight="72dp"
+                android:scaleType="centerCrop"
+                fresco:placeholderImage="@drawable/ic_bags2"
+                fresco:progressBarAutoRotateInterval="1000"
+                fresco:progressBarImage="@drawable/ic_refresh_black_24dp" />
 
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:id="@+id/product_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_200sdp"
-                    android:adjustViewBounds="true"
-                    android:background="@color/material_grey_300"
-                    android:minHeight="72dp"
-                    android:scaleType="centerCrop"
-                    fresco:placeholderImage="@drawable/ic_bags2"
-                    fresco:progressBarAutoRotateInterval="1000"
-                    fresco:progressBarImage="@drawable/ic_refresh_black_24dp" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_margin="8dp"
-                        android:layout_marginBottom="4dp"
-                        android:layout_toStartOf="@id/price"
-                        android:text="ProductName"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/price"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_gravity="end"
-                        android:layout_margin="8dp"
-                        android:layout_marginBottom="4dp"
-                        android:text="ProductName"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/description"
-                    android:layout_width="match_parent"
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
                     android:layout_margin="8dp"
-                    android:text="description"
+                    android:layout_marginBottom="4dp"
+                    android:layout_toStartOf="@id/price"
+                    android:text="ProductName"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="16sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/category_name"
-                    android:layout_width="match_parent"
+                    android:id="@+id/price"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_gravity="end"
                     android:layout_margin="8dp"
-                    android:text="description"
+                    android:layout_marginBottom="4dp"
+                    android:text="ProductName"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/product_info"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:text="description"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="16sp" />
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="description"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="16sp" />
+
+            <TextView
+                android:visibility="visible"
+                android:id="@+id/category_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="description"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="16sp" />
+
+            <TextView
+                android:visibility="visible"
+                android:id="@+id/product_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="description"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="16sp" />
 
 
-            </LinearLayout>
-        </ScrollView>
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/to_bottom_button"
