--- a/app/src/main/res/layout/layout_delete_poduct_dialog.xml
+++ b/app/src/main/res/layout/layout_delete_poduct_dialog.xml
@@ -44,7 +44,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/ef_colorPrimaryDark" />
+            android:background="@color/colorPrimaryDark" />
 
         <LinearLayout
             android:layout_width="match_parent"
