--- a/app/src/main/res/layout/layout_order_status_list.xml
+++ b/app/src/main/res/layout/layout_order_status_list.xml
@@ -39,7 +39,7 @@
         android:id="@+id/ok"
         android:layout_margin="16dp"
         android:layout_gravity="center"
-        android:text="@string/ef_ok"
+        android:text="@string/ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
