--- a/app/src/main/res/layout/activity_update_order.xml
+++ b/app/src/main/res/layout/activity_update_order.xml
@@ -112,6 +112,7 @@
                                 android:background="@drawable/ic_background_gray">
 
                                 <EditText
+                                    android:gravity="center"
                                     android:id="@+id/order_id"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -154,6 +155,8 @@
                                 android:background="@drawable/ic_background_gray">
 
                                 <EditText
+                                    android:gravity="center"
+
                                     android:id="@+id/client_name"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -197,7 +200,7 @@
 
                                 <EditText
                                     android:id="@+id/sender_name"
-
+                                    android:gravity="center"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_vertical"
@@ -338,6 +341,7 @@
                                 android:background="@drawable/ic_background_gray">
 
                                 <EditText
+                                    android:gravity="center"
                                     android:id="@+id/status"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -380,6 +384,7 @@
                                 android:background="@drawable/ic_background_gray">
 
                                 <EditText
+                                    android:gravity="center"
                                     android:id="@+id/shipping_status"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -424,7 +429,7 @@
 
                                 <EditText
                                     android:id="@+id/client_order_phone1"
-
+                                    android:gravity="center"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_vertical"
@@ -462,7 +467,7 @@
 
                                 <EditText
                                     android:id="@+id/order_type"
-
+                                    android:gravity="center"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_vertical"
@@ -501,7 +506,7 @@
 
                                 <EditText
                                     android:id="@+id/real_shipping_return_cost"
-
+                                    android:gravity="center"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_vertical"
@@ -543,6 +548,7 @@
                                 android:background="@drawable/ic_background_gray">
 
                                 <EditText
+                                    android:gravity="center"
                                     android:id="@+id/client_feedback"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -586,6 +592,7 @@
                                 android:background="@drawable/ic_background_gray">
 
                                 <EditText
+                                    android:gravity="center"
                                     android:id="@+id/client_address"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -633,7 +640,7 @@
 
                                     <EditText
                                         android:id="@+id/client_area"
-
+                                        android:gravity="center"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center_vertical"
@@ -719,6 +726,7 @@
                                 android:background="@drawable/ic_background_gray">
 
                                 <EditText
+                                    android:gravity="center"
                                     android:id="@+id/shipping_cost"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -771,7 +779,7 @@
 
                                     <EditText
                                         android:id="@+id/item_cost"
-
+                                        android:gravity="center"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center_vertical"
@@ -814,6 +822,7 @@
                                     android:background="@drawable/ic_background_gray">
 
                                     <EditText
+                                        android:gravity="center"
                                         android:id="@+id/item_no"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
@@ -859,7 +868,7 @@
 
                                 <EditText
                                     android:id="@+id/discount"
-
+                                    android:gravity="center"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_vertical"
@@ -900,6 +909,7 @@
                                 android:background="@drawable/ic_background_gray">
 
                                 <EditText
+                                    android:gravity="center"
                                     android:id="@+id/order_total_cost"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -941,6 +951,7 @@
                                 android:background="@drawable/ic_background_gray">
 
                                 <EditText
+                                    android:gravity="center"
                                     android:id="@+id/ntes"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -1265,6 +1276,8 @@
                 app:layout_constraintTop_toTopOf="@+id/edt_max_value" />
 
             <EditText
+
+                android:gravity="center"
                 android:id="@+id/edt_max_value"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -1296,6 +1309,7 @@
                 app:layout_constraintTop_toTopOf="@+id/edt_max_int" />
 
             <EditText
+                android:gravity="center"
                 android:id="@+id/edt_max_int"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -1329,6 +1343,7 @@
                 app:layout_constraintTop_toTopOf="@+id/edt_max_frac" />
 
             <EditText
+                android:gravity="center"
                 android:id="@+id/edt_max_frac"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
