--- a/app/src/main/res/layout/fragment_request_balance.xml
+++ b/app/src/main/res/layout/fragment_request_balance.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -26,13 +25,16 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
+            <Spinner
+                android:id="@+id/balance_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/available_balance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="36dp"
                 android:src="@drawable/ic_logo"
-                android:text="@string/available_balance"
                 android:textColor="@color/black_text_color"
                 android:textSize="18sp"
                 android:textStyle="bold" />
